# tailor-prescription

./: .gitignore  README.md  max_icu_beds.py  min_costs_icu_beds.py  output.html  pyproject.toml  quickstart.py  read_data.py
instances/: mock-commented.txt  mock.txt
