[project]
name = "max-icu-beds"
version = "0.0.1"
description = "Maximize the allocation of ICU beds in the territory of Brazil's Federal District during public health emergencies, considering a fixed budget, as well as available equipment and professional staff in each hospital."
authors = ["Lara Pontes <laradicp@gmail.com>"]

[project.dependencies]
pyomo = "pyomo"
