[project]
name = "min-costs-icu-beds"
version = "0.0.1"
description = "Minimize the costs for the allocation of ICU beds in the territory of Brazil's Federal District during public health emergencies, considering a fixed demand."
authors = ["Lara Pontes <laradicp@gmail.com>"]

[project.dependencies]
pyomo = "pyomo"
